hide text before card flips

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <!--						<img src="pp.jpg" alt="" class="pp" />-->
 <!--					</div>-->
 					<div class="card__body">
-						<h3 class="input"></h3>
-
+						<h3 class="input hide"></h3>
 					</div>
 				</div>
 			</div>
