--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Game Card</title>
+	<title>Brian Eno's Oblique Strategies</title>
 	<link rel="stylesheet" href="main.css" />
 </head>
 <body>
