change strat text to p

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--						<img src="pp.jpg" alt="" class="pp" />-->
 <!--					</div>-->
 					<div class="card__body">
-						<h3 class="input hide"></h3>
+						<p class="input hide"></p>
 					</div>
 				</div>
 			</div>
