--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Brian Eno's Oblique Strategies</title>
 	<link rel="stylesheet" href="main.css" />
+	<script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
 </head>
 <body>
 	<div class="card">
