fixed margin top of card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
 </head>
 <body>
+<div class="container">
 	<div class="card">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
@@ -25,6 +26,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 	<script src="main.js"></script>
 </body>
 </html>
