made background color off-white

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-	<div class="card">
+	<div class="card content">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
 				<h2>OBLIQUE STRATEGIES</h2>
