--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
 </head>
 <body>
-<div class="container">
+<div class="container centered">
 	<div class="card content">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
