--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Brian Eno's Oblique Strategies</title>
+	<link rel="shortcut icon" type="image/jpg" href="images/favicon-32x32.png"/>
+
 	<link rel="stylesheet" href="main.css" />
 	<script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
 </head>
