--- a/index.html
+++ b/index.html
@@ -32,3 +32,5 @@
 	<script src="main.js"></script>
 </body>
 </html>
+
+<!-- “Stop thinking about art works as objects and start thinking about them as triggers for experiences." - Brian Eno -->
