added link + main title disappears after 3 secs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="card content">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
-				<h2>OBLIQUE STRATEGIES</h2>
+				<h2>BRIAN ENO'S <br>OBLIQUE STRATEGIES</h2>
 			</div>
 			<div class="card__face card__face--back">
 				<div class="card__content">
@@ -28,7 +28,10 @@
 			</div>
 		</div>
 	</div>
+
 </div>
+<footer><a href="https://syafii.co/" target=”_blank”>syafii.co</a></footer>
+<!--<a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target=”_blank”>Get Oblique Strategies</a>-->
 	<script src="main.js"></script>
 </body>
 </html>
