added about page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	</div>
 
 </div>
-<footer><a href="https://syafii.co/" target=”_blank”>syafii.co</a></footer>
+<footer><a class="about" href="about.html">about</a></footer>
+<!--<a href="https://syafii.co/" target=”_blank”>syafii.co</a>-->
 <!--<a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target=”_blank”>Get Oblique Strategies</a>-->
 	<script src="main.js"></script>
 </body>
