add links to about page

--- a/about.html
+++ b/about.html
@@ -10,27 +10,14 @@
     <script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
 </head>
 <body>
-<div class="container centered">
-    <div class="card content">
-        <div class="card__inner">
-            <div class="card__face card__face--front">
-                <h2>BRIAN ENO'S <br>OBLIQUE STRATEGIES</h2>
-            </div>
-            <div class="card__face card__face--back">
-                <div class="card__content">
-                    <!--					<div class="card__header">-->
-                    <!--						<img src="pp.jpg" alt="" class="pp" />-->
-                    <!--					</div>-->
-                    <div class="card__body">
-                        <p class="input hide"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="container centered about">
+    <h1><a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target="_blank">Buy cards</a></h1>
+    <br>
+    <h1><a href="https://github.com/ghsyafii/oblique-strategies" target="_blank">Get code</a></h1>
     </div>
 
 </div>
-<footer><a class="back" href="index.html">back</a></footer>
+<footer><a class="back" href="index.html">go back</a></footer>
 <!--<a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target=”_blank”>Get Oblique Strategies</a>-->
 <script src="main.js"></script>
 </body>
