--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="card content">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
-				<h2>BRIAN ENO'S <br>OBLIQUE STRATEGIES</h2>
+				<h2 class="head">BRIAN ENO'S <br>OBLIQUE STRATEGIES</h2>
 			</div>
 			<div class="card__face card__face--back">
 				<div class="card__content">
