add link to email

--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
     <h1><a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target="_blank">Buy cards</a></h1>
     <br>
     <h1><a href="https://github.com/ghsyafii/oblique-strategies" target="_blank">Get code</a></h1>
+    <br>
+    <h1><a href="mailto:hey@syafii.co">Say hello</a></h1>
     </div>
 
 </div>
