--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="shortcut icon" type="image/jpg" href="images/favicon-32x32.png"/>
 
 	<link rel="stylesheet" href="main.css" />
-	<script async crossorigin src="https://pep.dev/pep.js#Ki4UeU4m"></script>
+	<script async crossorigin src="https://pep.dev/pep.js#E2LRWj6z"></script>
 </head>
 <body>
 <div class="container centered">
