changed it to back from go back so when mouse out on index, link disappears

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     </div>
 
 </div>
-<footer><a class="back" href="index.html">go back</a></footer>
+<footer><a class="back" href="index.html">back</a></footer>
 <!--<a href="https://www.enoshop.co.uk/product/oblique-strategies.html" target=”_blank”>Get Oblique Strategies</a>-->
 <script src="main.js"></script>
 </body>
