--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon-32x32.png"/>
 
     <link rel="stylesheet" href="main.css" />
+    <script async crossorigin src="https://pep.dev/pep.js#8k8rQKrj"></script>
 </head>
 <body>
 <div class="container centered about">
