--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <br>
     <h1><a href="https://github.com/ghsyafii/oblique-strategies" target="_blank">Get code</a></h1>
     <br>
-    <h1><a href="mailto:hey@syafii.co">Say hello</a></h1>
+    <h1><a href="mailto:syafii.g@gmail.com">Say hello</a></h1>
     </div>
 
 </div>
